fix responsive jump links

--- a/styles.css
+++ b/styles.css
@@ -183,11 +183,11 @@ About
 #work_section,
 #contact_section {
   margin-bottom: 0;
-  height: 100%;
+  min-height: 100%;
 }
 
 #about {
-  padding-top: 137px;
+  padding-top: 120px;
 }
 
 #about_text {
@@ -257,9 +257,9 @@ Work
 
 #work_section {
   background-color: #3498DB;
-  border-bottom: 137px solid #fff;
+  border-bottom: 120px solid #fff;
   color: #fff;
-  margin-bottom: -137px;
+  margin-bottom: -120px;
 }
 
 #work_section h2,
@@ -272,7 +272,7 @@ Work
 a.anchor {
     display: block;
     position: relative;
-    top: -137px;
+    top: -120px;
     visibility: hidden;
 }
 
@@ -285,9 +285,9 @@ a.anchor {
 }
 
 .work-item {
-  float: left;
+  /*float: left;*/
   margin: 0 auto;
-  width: 32%;
+  width: 70%;
 }
 
 .overlay {
@@ -406,6 +406,19 @@ Media queries
   nav a {
     font-size: 1em;
   }
+
+  #about {
+    padding-top: 135px;
+  }
+
+  #work_section {
+    border-width: 135px;
+    margin-bottom: -135px;
+  }
+
+  a.anchor {
+    top: -135px;
+  }
 }
 
 @media screen and (min-width: 550px) {
@@ -440,6 +453,10 @@ Media queries
     padding: 0;
   }
 
+  #about {
+    padding-top: 137px;
+  }
+
   #about_text {
     float: left;
     margin-right: 4%;
@@ -463,6 +480,20 @@ Media queries
 
   #main_button {
     display: block;
+  }
+
+  #work_section {
+    border-width: 137px;
+    margin-bottom: -137px;
+  }
+
+  .work-item {
+    float: left;
+    width: 32%;
+  }
+
+  a.anchor {
+    top: -137px;
   }
 }
 
